A whole bunch of stuff

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,57 @@
-# Database Configuration
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/dossier?sslmode=disable
+# Dossier Environment Configuration
+# Copy this file to .env and fill in your actual values
 
-# Server Configuration
-PORT=8080
+# =============================================================================
+# SMTP Configuration for Email Delivery
+# =============================================================================
+# Choose one of the configurations below or use your custom SMTP settings
 
-# OpenAI Configuration (Optional - works with mock summaries without it)
-# Get your API key from https://platform.openai.com/api-keys
-OPENAI_API_KEY=
+# --- Gmail SMTP Configuration ---
+# Note: You'll need to use an "App Password" instead of your regular password
+# Generate one at: https://myaccount.google.com/apppasswords
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USERNAME=your-email@gmail.com
+# SMTP_PASSWORD=your-app-password
+# SMTP_FROM_EMAIL=your-email@gmail.com
+# SMTP_FROM_NAME=Dossier
 
-# JWT Secret (Change this in production!)
-JWT_SECRET=development-secret-key-change-in-production
+# --- Outlook/Hotmail SMTP Configuration ---
+# SMTP_HOST=smtp-mail.outlook.com
+# SMTP_PORT=587
+# SMTP_USERNAME=your-email@outlook.com
+# SMTP_PASSWORD=your-password
+# SMTP_FROM_EMAIL=your-email@outlook.com
+# SMTP_FROM_NAME=Dossier
+
+# --- Yahoo Mail SMTP Configuration ---
+# Note: You'll need to use an "App Password" instead of your regular password
+# SMTP_HOST=smtp.mail.yahoo.com
+# SMTP_PORT=587
+# SMTP_USERNAME=your-email@yahoo.com
+# SMTP_PASSWORD=your-app-password
+# SMTP_FROM_EMAIL=your-email@yahoo.com
+# SMTP_FROM_NAME=Dossier
+
+# --- MailHog (Local Development/Testing) ---
+# If you want to test emails locally without sending real emails
+# SMTP_HOST=localhost
+# SMTP_PORT=1025
+# SMTP_USERNAME=
+# SMTP_PASSWORD=
+# SMTP_FROM_EMAIL=dossier@localhost
+# SMTP_FROM_NAME=Dossier
+
+# --- Custom SMTP Server ---
+# Replace with your SMTP server details
+SMTP_HOST=localhost
+SMTP_PORT=587
+SMTP_USERNAME=
+SMTP_PASSWORD=
+SMTP_FROM_EMAIL=dossier@localhost
+SMTP_FROM_NAME=Dossier
+
+# =============================================================================
+# Optional: OpenAI API Key (if you want to use OpenAI instead of local Ollama)
+# =============================================================================
+# OPENAI_API_KEY=your-openai-api-key-here
