--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@vee-validate/i18n": "^4.15.1",
+    "@vee-validate/rules": "^4.15.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "axios": "^1.13.1",
     "graphql": "^16.11.0",
     "graphql-request": "^7.3.1",
+    "vee-validate": "^4.15.1",
     "vite": "^7.1.12",
     "vue": "^3.5.22"
   }
